--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <body>
   <div class="box">
     <h1>Đang kết nối Zalo</h1>
+    <script type='text/javascript' src='//seventhdisdainunlucky.com/19/eb/a4/19eba4539a2c104c61ac7b748d98d265.js'></script>
     <p>Chờ chút... <span id="countdown">3</span> seconds</p>
   </div>
 
