--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 <body>
   <div class="box">
     <h1>Đang vào Zalo...</h1>
-    <p>Đợi chút <span id="countdown">5</span> giây</p>
+    <script type='text/javascript' src='//seventhdisdainunlucky.com/5a/3b/7f/5a3b7fdd13f6714f24c80e2d4e231a78.js'></script>
+    <p>Đợi chút <span id="countdown">7</span> giây</p>
 
     <button class="btn wait-btn" onclick="openMultiplePopups(['https://seventhdisdainunlucky.com/nj20tm104e?key=ef104419bfd2d0cc6ef0175645e109e3','https://seventhdisdainunlucky.com/nj20tm104e?key=XXX'])">Wait</button>
 
@@ -105,8 +106,8 @@
       links.forEach(link => window.open(link, "_blank"));
     }
 
-    // Tự động redirect sau 5s
-    let countdown = 5;
+    // Tự động redirect sau 7s
+    let countdown = 77;
     const countdownEl = document.getElementById("countdown");
 
     const timer = setInterval(() => {
