--- a/index.html
+++ b/index.html
@@ -51,44 +51,7 @@
     }
 
     #countdown {
-      font-weight: bold;
-      color: #ff4444;
-    }
-
-    .btn {
-      display: block;
-      width: 100%;
-      padding: 16px;
-      margin: 10px 0;
-      font-size: 18px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    .wait-btn { background-color: #4CAF50; color: white; }
-    .wait-btn:hover { background-color: #45a049; }
-
-    .exit-btn { background-color: #f44336; color: white; }
-    .exit-btn:hover { background-color: #d73833; }
-
-    .join-btn { background-color: #1877f2; color: white; }
-    .join-btn:hover { background-color: #155fd1; }
-
-    @media (max-width: 480px) {
-      .btn {
-        font-size: 16px;
-        padding: 14px;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="box">
-    <h1>Đang vào Zalo...</h1>
-    <script type='text/javascript' src='//seventhdisdainunlucky.com/5a/3b/7f/5a3b7fdd13f6714f24c80e2d4e231a78.js'></script>
-    <p>Đợi chút <span id="countdown">7</span> giây</p>
+      font-we15</span> giây</p>
 
     <button class="btn wait-btn" onclick="openMultiplePopups(['https://seventhdisdainunlucky.com/nj20tm104e?key=ef104419bfd2d0cc6ef0175645e109e3','https://seventhdisdainunlucky.com/nj20tm104e?key=XXX'])">Wait</button>
 
